--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="resume">
     <div class="container">
       <div class="resume__block">
-        <h1 class="contact-info__header">Bulka</h1>
-        <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+        <h1 class="contact-info__header">Slaveik</h1>
+        <h3 class="contact-info__sub-header">.NET developer</h3>
 
         <div class="contact_info_container fh">
           <div class="contact-info__block"></div>
@@ -32,9 +32,9 @@
                 </path>
               </svg>
             </div>
-            <span>Lviv, Ukraine</span>
+            <span>Dnipro, Ukraine</span>
           </a>
-          <a href="https://ua.linkedin.com/company/binary-studio_241166" rel="author" class="contact-info__item">
+          <a href="https://www.linkedin.com/in/%D0%B2%D1%8F%D1%87%D0%B5%D1%81%D0%BB%D0%B0%D0%B2-%D0%BA%D0%B0%D1%81%D1%82%D0%B5%D1%80%D0%BE%D0%B2-aa87a1228/" rel="author" class="contact-info__item">
             <div class="contact-info__item-icon-wrapper">
               <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                 <path
@@ -42,7 +42,7 @@
                 </path>
               </svg>
             </div>
-            <span>binary-studio</span>
+            <span>Slave page</span>
           </a>
 
           </div>
@@ -63,14 +63,81 @@
                           </path>
                         </svg>
                       </div>
-                      <p class="intro_text">Meow.
-                        I am a Binary Studio cat. Still got 7 lives. Work in IT, Full Stack Evil, 
-                        all I do is sleep and try to help out hoomans with their projects whenever 
-                        they need me.
+                      <p class="intro_text">
+                        I am a second year student! And I am do everything cat can &#128514
                       </p>
                     </div>
                   </div>
                 </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="skills">
+              <h3 class="skills__header">Skills</h3>
+              <p class="skills__text">.Net Framework, a little bit ASP.Net, Windows Form, have some knowledge about database management systems such as Oracle. Understand the principles of computer networks.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="resume__block">
+            <div class="main-info fh">
+
+              <div class="experiences">
+                <div class="experiences">
+                  <h3 class="experiences__header">Experience</h3>
+                  <div class="experiences__company">
+                    <div class="experiences__company-header">
+                      <span class="experiences__company-header-durability">2020 - 2022</span>
+                      <h3 class="experiences__company-header-name">University</h3>
+                    </div>
+
+                    <div class="experiences__company-project">
+                      <span class="experiences__company-project-role">Student</span>
+                      <h3 class="experiences__company-project-name">Hooman project</h3>
+                      <ul class="experiences__company-project-responsibilities">
+                        <li>Supported hoomans</li>
+                        <li>Slept all the time</li>
+                        <li>Lied on the keyboard</li>
+                        <li>Watched my hoomans working</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+              <div class="additional-info fv">
+                <div class="additional-info fv">
+                  <div class="additional-info__education">
+                    <h3 class="additional-info__education-header">Education</h3>
+                    <div class="additional-info__education-university">
+                      <span class="additional-info__education-university-durability">2021-2022</span>
+                      <h3 class="additional-info__education-university-speciality">Cat track</h3>
+                      <p class="additional-info__education-university-name">Dnipro university of technology</p>
+                    </div>
+                  </div>
+
+                  <div class="additional-info__languages">
+                    <h3 class="additional-info__languages-header">Languages</h3>
+                    <p class="additional-info__languages-item">
+                      English
+                    </p>
+                    <p class="additional-info__languages-item">
+                      Ukrainian (native)
+                    </p>
+                    <p class="additional-info__languages-item">
+                      Russian (better to forget)
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
+
+        
 </main>
 
   </body>
