--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
                   <div class="additional-info__languages">
                     <h3 class="additional-info__languages-header">Languages</h3>
                     <p class="additional-info__languages-item">
-
                       English
                     </p>
                     <p class="additional-info__languages-item">
@@ -152,7 +151,7 @@
                       Ukrainian (understand)
                     </p>
                     <p class="additional-info__languages-item">
-                      English (don't understand)
+                      English
                     </p>
                   </div>
                 </div>
